fixed menu too small on phone

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -467,9 +467,9 @@
   }
 
   .nav-btn {
-    font-size: 30px;
+    font-size: 25px;
     margin-left: 0px;
-    width: 185px;
+    width: 176px;
     font-family: PoppinsMed;
     height: 126px;
     border: none;
@@ -611,7 +611,7 @@
   }
 
   .main-nav {
-    right: -235px;
+    right: -175px;
   }
 
   .btn-menu {
@@ -622,7 +622,7 @@
   }
 
   .nav-btn {
-    width: 118px;
+    width: 175px;
     font-size: 20px;
   }
 
